[metadata]
name = pybots
version = attr: pybots.__info__.__version__
author = Alexandre D'Hondt
author-email = alexandre.dhondt@gmail.com
home-page = https://github.com/dhondta/pybots
description = Library for quickly creating client bots for communicating with remote hosts
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    python
    development
    programming
    framework
    cli
    toolkit
license = AGPLv3
license-file = LICENSE
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
install_requires =
    beautifulsoup4
    pycountry
    pypassport; python_version=='2.7'
    requests
    urllib3
    user_agent
    simplejson
    tinyscript
setup-requires = setuptools
python-requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*!=3.4.*,<4
