[metadata]
name = pybots
version = file: tinyscript/VERSION.txt
author = Alexandre D'Hondt
author-email = alexandre.dhondt@gmail.com
home-page = https://github.com/dhondta/python-pybots
description = Devkit for quickly creating client robots for remote communications
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    python
    development
    programming
    framework
    cli
    devkit
    robots
license = AGPLv3
license-file = LICENSE
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = False
install_requires =
    bs4
    pycountry
    requests
    simplejson
    tinyscript>=1.22.4
    user_agent
setup-requires = setuptools
python-requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*!=3.4.*,<4

[options.package_data]
* = *.txt
